Piscine-7/Exam01/1-0-ft_putstr/1-1-ft_putstr.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1r7p11.42.fr
Darwin 16.7.0 x86_64
$> date
Fri Jul 12 19:15:13 CEST 2019
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2019/c-piscine-exam-01/exam_20190712/lmarabes

= Git history ==================================================================
$> git -C /tmp/tmpRSdHGj/user log --pretty='%H - %an, %ad : %s'
1bbecbae001ba613f8b03639eea9976962df7f69 - Exam 42, Fri Jul 12 19:14:14 2019 +0200 : ft_putstr-retry
2a00b1566a1bbe9ac20a001643b9fee04c2a2e15 - Exam 42, Fri Jul 12 19:03:30 2019 +0200 : ft_putstr
5148dc45aa97c2789951f57b24bfc581cc4f73cd - Exam 42, Fri Jul 12 18:36:01 2019 +0200 : hello-retry
98f63d2be61bd77035b4e44383fafb34c1d50506 - Exam 42, Fri Jul 12 18:24:57 2019 +0200 : hello
 
= Collected files ==========================================
$> ls -lAR /tmp/tmpRSdHGj/user
total 8
-rw-r--r--  1 root  wheel  858 Jul 12 19:15 __GIT_HISTORY
drwxr-xr-x  3 root  wheel  102 Jul 12 19:15 ft_putstr
drwxr-xr-x  3 root  wheel  102 Jul 12 19:15 hello

/tmp/tmpRSdHGj/user/ft_putstr:
total 8
-rw-r--r--  1 root  wheel  108 Jul 12 19:15 ft_putstr.c

/tmp/tmpRSdHGj/user/hello:
total 8
-rw-r--r--  1 root  wheel  83 Jul 12 19:15 hello.c
 
= ft_putstr ====================================================================
$> clang -Wextra -Wall -Werror main.c ft_putstr.c -o user_exe 
ft_putstr.c:8:3: error: implicit declaration of function 'write' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
                write(1, &str[i], 1);
                ^
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
